--- a/index.html
+++ b/index.html
@@ -29,6 +29,15 @@
             text-align: center;
             margin-top: 20px;
         }
+        .contact-info {
+            margin-top: 20px;
+            padding: 10px;
+            background-color: #f9f9f9;
+            border: 1px solid #ddd;
+        }
+        .contact-info p {
+            margin: 5px 0;
+        }
     </style>
 </head>
 <body>
@@ -75,6 +84,12 @@
             <h2>Ready to Start Your Python Journey?</h2>
             <p>Affordable Learning: Only $700 for the full course</p>
             <p>Flexible Scheduling: Contact us to plan your classes today!</p>
+        </div>
+
+        <div class="contact-info">
+            <h2>Contact Us</h2>
+            <p><strong>Email:</strong> <a href="mailto:bytesavvy@proton.me">bytesavvy@proton.me</a></p>
+            <p><strong>Text:</strong> 647-697-6792</p>
         </div>
     </div>
 </body>
