--- a/index.html
+++ b/index.html
@@ -23,20 +23,15 @@
             margin: auto;
         }
         .call-to-action {
-            background-color: #4CAF50;
+            background-color: #2196F3; /* Changed to blue */
             color: white;
             padding: 10px;
             text-align: center;
             margin-top: 20px;
         }
-        .contact-info {
-            margin-top: 20px;
-            padding: 10px;
-            background-color: #f9f9f9;
-            border: 1px solid #ddd;
-        }
-        .contact-info p {
-            margin: 5px 0;
+        a {
+            text-decoration: none;
+            color: white;
         }
     </style>
 </head>
@@ -84,10 +79,6 @@
             <h2>Ready to Start Your Python Journey?</h2>
             <p>Affordable Learning: Only $700 for the full course</p>
             <p>Flexible Scheduling: Contact us to plan your classes today!</p>
-        </div>
-
-        <div class="contact-info">
-            <h2>Contact Us</h2>
             <p><strong>Email:</strong> <a href="mailto:bytesavvy@proton.me">bytesavvy@proton.me</a></p>
             <p><strong>Text:</strong> 647-697-6792</p>
         </div>
