--- a/index.html
+++ b/index.html
@@ -80,7 +80,25 @@
         <section class="cta-section fade-in">
             <div class="cta-card">
                 <h2 class="cta-title">Ready to Start Your Python Journey?</h2>
-                <p class="cta-text">Affordable Learning: Only $700 for the full course</p>
+                <p class="cta-text">Choose your preferred payment method:</p>
+
+                <div class="payment-options">
+                    <div class="payment-option">
+                        <h3 class="payment-title">💳 Credit Card Payment</h3>
+                        <p class="payment-price">$717.50 CAD</p>
+                        <a href="https://buy.stripe.com/bJe9AS4dK3Se6J6gZGc7u00" class="payment-button credit-card"
+                            target="_blank">Pay with Credit Card</a>
+                    </div>
+
+                    <div class="payment-option">
+                        <h3 class="payment-title">📧 E-Transfer Payment</h3>
+                        <p class="payment-price">$700.00 CAD</p>
+                        <p class="payment-note">Save $17.50 with e-transfer!</p>
+                        <a href="mailto:bytesavvy@proton.me?subject=Python%20Course%20Enrollment%20-%20E-Transfer"
+                            class="payment-button etransfer">Contact for E-Transfer</a>
+                    </div>
+                </div>
+
                 <p class="cta-text">Flexible Scheduling: Contact us to plan your classes today!</p>
                 <div class="contact-info">
                     <p class="contact-item">
