--- a/index.html
+++ b/index.html
@@ -110,9 +110,23 @@
                         <strong>Text:</strong> 647-797-6721
                     </p>
                 </div>
+                <p style="margin-top: 1.5rem; font-size: 0.9rem; opacity: 0.9;">
+                    By enrolling, you agree to our <a href="terms.html"
+                        style="color: white; text-decoration: underline;">Terms of Service</a>
+                </p>
             </div>
         </section>
     </main>
+
+    <footer
+        style="background: rgba(30, 41, 59, 0.95); color: white; padding: 2rem 0; text-align: center; margin-top: 3rem;">
+        <div class="container">
+            <p style="margin-bottom: 0.5rem;">&copy; 2025 ByteSavvy Python Course. All rights reserved.</p>
+            <p style="font-size: 0.9rem;">
+                <a href="terms.html" style="color: #93c5fd; text-decoration: none; margin: 0 1rem;">Terms of Service</a>
+            </p>
+        </div>
+    </footer>
 
     <script src="script.js"></script>
 </body>
